<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iii_drone_simulation</name>
  <version>2.2.0</version>
  <description>
    Simulation assets for the III-Drone system.
  </description>
  <maintainer email="ffn@sdu.dk">ffn</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>iii_drone_core</depend>

  <exec_depend>iii_drone_interfaces</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>micro_ros_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
